@@ -460,12 +460,12 @@ DQ
                         <rect key="frame" x="271" y="368" width="159" height="26"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <animations/>
-                        <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" inset="2" id="10982">
+                        <popUpButtonCell key="cell" type="push" title="None" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" inset="2" selectedItem="4152" id="10982">
                             <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="menu"/>
                             <menu key="menu" title="OtherViews" id="4150">
                                 <items>
-                                    <menuItem title="None" id="4152"/>
+                                    <menuItem title="None" state="on" id="4152"/>
                                     <menuItem title="Progress Bar" tag="1" id="4153"/>
                                     <menuItem title="Text Window" tag="2" id="4154"/>
                                     <menuItem title="Web View" tag="3" id="4155"/>
@@ -561,7 +561,7 @@ DQ
                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" white="0.33333298560000002" alpha="1" colorSpace="calibratedWhite"/>
                                             </tableHeaderCell>
-                                            <imageCell key="dataCell" refusesFirstResponder="YES" alignment="left" animates="YES" imageScaling="proportionallyDown" image="22CE060B-D16C-4E9A-BA10-A029CFC0D632" id="1249"/>
+                                            <imageCell key="dataCell" refusesFirstResponder="YES" alignment="left" animates="YES" imageScaling="proportionallyDown" image="494ADC60-5B94-4373-AFF4-5E93E4952A45" id="1249"/>
                                         </tableColumn>
                                         <tableColumn identifier="2" editable="NO" width="559" minWidth="33.28857421875" maxWidth="2000" id="503">
                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Bundled Files">
@@ -631,7 +631,7 @@ DQ
                 <outlet property="interpreterTextField" destination="305" id="337"/>
                 <outlet property="isDroppableCheckbox" destination="299" id="340"/>
                 <outlet property="optimizeApplicationCheckbox" destination="11109" id="11113"/>
-                <outlet property="outputTypePopupMenu" destination="4148" id="4161"/>
+                <outlet property="outputTypePopupButton" destination="4148" id="uxL-Am-1K6"/>
                 <outlet property="prefsController" destination="11195" id="apI-W1-dIt"/>
                 <outlet property="profilesController" destination="2872" id="Eil-aK-aFN"/>
                 <outlet property="progressBar" destination="11189" id="11191"/>
@@ -2935,7 +2935,7 @@ Gw
         <userDefaultsController representsSharedInstance="YES" id="yij-LO-LNq"/>
     </objects>
     <resources>
-        <image name="22CE060B-D16C-4E9A-BA10-A029CFC0D632" width="16" height="16">
+        <image name="494ADC60-5B94-4373-AFF4-5E93E4952A45" width="16" height="16">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
